[package]
name = "broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
zookeeper = "0.6.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
